Made sure that the loading icon is always on top

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
@@ -352,6 +352,7 @@ html.full-height #push{
 	 position: absolute;
 	 right: 0;
 	 top: 78px;
+ 	z-index: 1000;
 }
 .ie7  #loading{left: 50%; margin-left: -483px;}
 
