--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -36,15 +36,18 @@
 				</li>
 				@foreach (var day in week.Days)
 				{
+					var preference = day as PreferenceDayViewModel;
 					<li data-mytime-state="@Html.Schedule().FormatState(day.State)" data-mytime-date="@Html.Schedule().FormatDate(day.Date)" class="@Html.AttributeEncode(day.StyleClassName)">
 						<div>
 							<div class="day-header">
 								<span class="floatleft ml5">@day.Header.DayDescription</span><span class="floatright mr5">@day.Header.DayNumber</span>
 							</div>
-							<!--<div id="possible-start-times">@day.PossibleStartTimes</div>
-							<div id="possible-end-times">@day.PossibleEndTimes</div>
-							<div id="possible-contract-times">@day.PossibleContractTimes</div>-->
-							@Html.DayContent(day)
+							<div class="day-content pdt10">
+								<span class="fullwidth displayblock"></span>
+								<span class="preference fullwidth displayblock clearrightfloat">
+									@preference.Preference
+								</span>
+							</div>
 						</div>
 					</li>
 				}
