--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
@@ -3,192 +3,22 @@
 @model Teleopti.Ccc.Web.Areas.MobileReports.Models.Layout.ReportViewModel
 @{ Layout = "~/Views/Shared/MobileLayoutBase.cshtml"; }
 @section csshead {
-	<link rel="stylesheet" href="@Url.Content("~/Content/MobileContent/DateBox/jquery.mobile.datebox-1.0.1.css")" />
+	<link rel="stylesheet" href="@Url.Content("~/Areas/MobileReports/Content/Css/mobile.custom.css")" />
+	<link rel="stylesheet" href="@Url.Content("~/Content/MobileDateBox/jquery.mobile.datebox-1.0.1.css")" />
 }
 @section jsBeforeMobile {
 	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/Teleopti.MobileReports.Common.js")"></script>
-	<script>
-		$(function () {
-			var cNs = Teleopti.MobileReports.Common;
-
-			$('#report-view-date-nav-current').width($(window).width() - 100);
-			$(window).resize(function () {
-				$('#report-view-date-nav-current').width($(window).width() - 100);
-			});
-
-
-			$("#report-view").live("pageinit", function () {
-				$('#report-view').bind('report', function () {
-					cNs.ClearError();
-					var currentData = reportDataOrBack();
-					if (currentData == null) return;
-
-					$.ajax({
-						url: 'Report/Report',
-						dataType: 'json',
-						contentType: 'application/json; charset=utf-8',
-						type: 'POST',
-						cache: false,
-						data: JSON.stringify(currentData),
-						beforeSend: function () {
-							$.mobile.showPageLoadingMsg();
-							$('#report-view').find('.ui-btn:not(.ui-disabled)').each(function () {
-								$(this).addClass('ui-disabled').addClass('by-me');
-							});
-						},
-						complete: function (jqXHR, textStatus) {
-							$('#report-view').find('.ui-btn.by-me').each(function () {
-								$(this).removeClass('ui-disabled').removeClass('by-me');
-							});
-							$.mobile.hidePageLoadingMsg();
-						},
-						success: function (data, textStatus, jqXHR) {
-							updateView(data);
-						},
-						error: function (jqXHR, textStatus, errorThrown) {
-							if (jqXHR.status == 400) {
-								var data = $.parseJSON(jqXHR.responseText);
-								updateView(data);
-								return;
-							} else if (jqXHR.status == 500) {
-								cNs.AddError('#report-view', 'Server returned an error');
-							}
-						}
-					});
-				});
-
-				$('#report-view').live('pageshow', function () {
-					$('#report-view').trigger('report');
-				});
-
-				function reportDataOrBack() {
-					var currentData = $('#report-view').data('report-settings');
-					if (!(typeof currentData != 'undefined' && currentData != null)) {
-						$.mobile.changePage($('#report-settings-view'));
-						return null;
-					}
-					return currentData;
-				}
-
-				function updateView(data) {
-					$('#report-graph-holder').hide();
-					$('#report-table-holder').hide();
-
-					if (typeof data.Errors != 'undefined') {
-						cNs.AddError('#report-view', data.Errors.join('<br />'));
-						return;
-					}
-					if (typeof data.Report != 'undefined' && data.Report) {
-						var reportInfo = data.Report.ReportInfo;
-						if (typeof reportInfo != 'undefined' && reportInfo) {
-							$('.ui-btn-text', '#report-view-date-nav-current').html(reportInfo.ReportDate);
-							$('#report-name').html(reportInfo.ReportName);
-							$('#report-skillset').html(reportInfo.SkillNames);
-
-
-							var reportChart = data.Report.ReportChart;
-							if (typeof reportChart != 'undefined' && reportChart) {
-								$('#report-graph-holder').html("<img style='min-width: 100%;' src='" + reportChart.ReportImagePath + "' alt='" + reportInfo.ReportName + "' />").show();
-							}
-
-							var reportData = data.Report.ReportData;
-							if (typeof reportData != 'undefined' && reportData) {
-								$('#report-table-holder').html(generateReportTable(reportInfo, reportData)).show();
-							}
-						}
-
-					}
-				}
-
-
-				function generateReportTable(reportInfo, tableData) {
-					var tab = [];
-					tab[tab.length] = '<table><thead><tr><th scope"col">';
-					tab[tab.length] = reportInfo.PeriodLegend;
-					tab[tab.length] = '</th><th scope="col">';
-					tab[tab.length] = reportInfo.Y1Legend;
-					tab[tab.length] = '</th><th scope="col">';
-					tab[tab.length] = reportInfo.Y2Legend;
-					tab[tab.length] = '</th></tr></thead><tbody>';
-					$.each(tableData, function () {
-						tab[tab.length] = rowBuilder(this);
-					});
-					tab[tab.length] = "</tbody></table>";
-					return tab.join('');
-				}
-
-				function rowBuilder(curRow) {
-					var row = '<tr>';
-					$.each(curRow, function () {
-						row += '<td>' + this + '</td>';
-					});
-					row += '</tr>';
-					return row;
-				}
-
-				$('#report-view-date-nav-next').bind('click', function () {
-					navDate(1);
-				});
-				$('#report-view-date-nav-prev').bind('click', function () {
-					navDate(-1);
-				});
-				$('#report-view-date-nav-current').bind('swipeleft', function () {
-					navDate(1);
-				}).bind('swiperight', function () {
-					navDate(-1);
-				});
-
-				function navDate(dir) {
-					var currentData = reportDataOrBack();
-					if (currentData == null) return;
-
-					var date = cNs.FixedDateToDate(currentData.ReportDate);
-					date.setDate(date.getDate() + (dir * currentData.ReportIntervalType));
-					currentData.ReportDate = cNs.DateToFixedDate(date);
-
-					$('#report-view').data('report-settings', currentData);
-					$('#report-view').trigger('report');
-					$('#report-settings-view').trigger('datachange');
-				}
-			});
-
-			$("#report-settings-view").live("pageinit", function () {
-				$('#sel-date').datebox();
-				$('#report-view-show-button').bind('click', function () {
-					$('#report-view').data('report-settings', modelFromSettings()); // Save the values to #report-view data.
-					$.mobile.changePage($('#report-view'));
-
-				});
-				function modelFromSettings() {
-					var parent = $('#report-settings-view');
-					var reportRequestParam = {
-						"ReportId": $('input[name="sel-report"]:checked', parent).val(),
-						"ReportDate": cNs.DateToFixedDate($('#sel-date').data('datebox').theDate),
-						"ReportIntervalType": $('input[name="sel-interval"]:checked', parent).val(),
-						"SkillSet": $('#sel-skill').val().join(','),
-						"table": $('#report-settings-type-table').is(':checked'),
-						"graph": $('#report-settings-type-graph').is(':checked')
-					};
-					return reportRequestParam;
-				}
-
-				function adjustSettingsToData() {
-					// {"ReportId": "Id", "ReportDate": "Fixed Date", "ReportIntervalType": "1 / 7", "SkillSet": "-2,3,45,5", "table": "True/False", "graph": "True/False"}
-					var parent = $('#report-settings-view');
-
-				}
-			});
-
-		});
-		$(document).bind("mobileinit", function () {
-			$.mobile.orientationChangeEnabled = false;
-			$.mobile.loadingMessage = '@(Html.Raw(HttpUtility.JavaScriptStringEncode(Resources.LoadingThreeDots)))';
-			$.mobile.pageLoadErrorMessage = '@(Html.Raw(HttpUtility.JavaScriptStringEncode(Resources.CommunicationErrorEndPoint)))';
-		});
-	</script>
+	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/Teleopti.MobileReports.Index.js")"></script>
 }
 @section jsAfterMobile {
-	<script src="@Url.Content("~/Content/MobileContent/DateBox/jquery.mobile.datebox-1.0.1.js")"></script>
+	<script src="@Url.Content("~/Content/Scripts/RGraph.common.core.js")"></script>
+	<script src="@Url.Content("~/Content/Scripts/RGraph.common.key.js")"></script>
+	<script src="@Url.Content("~/Content/Scripts/RGraph.bar.js")"></script>
+	<script src="@Url.Content("~/Content/Scripts/RGraph.line.js")"></script>
+	<!--[if lt IE 9]><script src="@Url.Content("~/Content/Scripts/excanvas.compressed.js")"></script><![endif]-->
+	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/jquery.mobile.report.graph.js")"></script>
+	<script src="@Url.Content("~/Areas/MobileReports/Content/Scripts/jquery.mobile.report.table.js")"></script>
+	<script src="@Url.Content("~/Content/MobileDateBox/jquery.mobile.datebox-1.0.1.js")"></script>
 	<script>
 		$.extend($.mobile.datebox.prototype.options.lang, {
 			'loc': @Html.Raw(Model.DateBoxGlobalization.ToJson())
@@ -197,6 +27,9 @@
 		$.extend($.mobile.datebox.prototype.options, {
 			useLang: 'loc'
 		});
+	</script>
+	<script>
+		Teleopti.MobileReports.Index.Init(['@(Html.Raw(HttpUtility.JavaScriptStringEncode(Resources.LoadingThreeDots)))', '@(Html.Raw(HttpUtility.JavaScriptStringEncode(Resources.CommunicationErrorEndPoint)))'])
 	</script>
 }
 <div data-role="page" id="home-view">
@@ -302,6 +135,7 @@
 			</li>
 			<li data-role="fieldcontain" class="pdr0 pdl0">
 				<div id="report-graph-holder" class="center-wrapper">
+					
 				</div>
 			</li>
 			<li data-role="fieldcontain" class="pd0">
