--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Reports/Custom/PrognosMotSchemalagt.rdlc
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Reports/Custom/PrognosMotSchemalagt.rdlc
@@ -1139,7 +1139,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Parameters!ResWeekColon.Value + " " + Fields!year_week.Value</Value>
+                              <Value>="Vecka: " + Fields!year_week.Value</Value>
                               <Style>
                                 <FontWeight>Bold</FontWeight>
                                 <Color>DimGray</Color>
