--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
@@ -104,6 +104,10 @@
 	border-radius: 2px;
 }
 
+.gradient {
+	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .6) 100%);
+} 
+
 .dayoff 
 {
 	margin-left: 5px;
@@ -114,17 +118,9 @@
 	height: 18px;
 	border-radius: 2px;
 	
+	background-image: url(../Images/stripe.png);
+	
 	background-color: beige;
-	 -webkit-background-size: 6px 6px;
-	background-image: -webkit-linear-gradient(-45deg, 
-			rgba(0, 0, 0, .1) 0%, 
-			rgba(0, 0, 0, .1) 10%, 
-			transparent 10%, 
-			transparent 50%, 
-			rgba(0, 0, 0, .1) 50%, 
-			rgba(0, 0, 0, .1) 60%, 
-			transparent 60%, 
-			transparent 100%)
 }
 
 #TeamScheduleDateRangeSelector.date-range-selector .datepicker{
