--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
@@ -79,7 +79,7 @@
 						<dt><span class="icon employee icon-left" title="@Teleopti.Ccc.UserTexts.Resources.UserName" id="username">@User.Identity.Name</span></dt>
 						<dd>
 							<ul class="ui-widget-content">
-								<li><a href="#">Settings</a></li>
+								<li><a href="#settings" data-mytime-action="settings/index">settings</a></li>
 								<li>@Html.ActionLink("Log out", "SignOut", "Authentication", new { area = "Start" }, new { title = @Teleopti.Ccc.UserTexts.Resources.LogOut, id = "signout" })</li>
 							</ul>
 						</dd>
