--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/SettingsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/SettingsPartial.cshtml
@@ -1,10 +1,20 @@
 ﻿@using Teleopti.Ccc.Web.Areas.MyTime.Models.Settings
 @model SettingsViewModel
 @{
-    Layout = null;
+	 Layout = null;
 }
-
-Culture...<select>@foreach(var c in Model.Cultures){<option value="@c.LCID">@c.DisplayName</option>}</select>
-UiCulture...<br/>
-Language...
-
+Culture...<select>@foreach(var c in Model.Cultures)
+						{
+							<option value="@c.LCID" @if(c.LCID == Model.ChoosenCulture.LCID)
+															{
+<text>selected='selected'</text>
+															}>@c.DisplayName</option>
+						}</select>
+<br/>
+UiCulture...<select>@foreach(var c in Model.Cultures)
+						{
+							<option value="@c.LCID" @if(c.LCID == Model.ChoosenUiCulture.LCID)
+															{
+<text>selected='selected'</text>
+															}>@c.DisplayName</option>
+						}</select>
