--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Authentication/MobileSignIn.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Start/Views/Authentication/MobileSignIn.cshtml
@@ -1,8 +1,6 @@
 ﻿@using Teleopti.Ccc.UserTexts
 @model Teleopti.Ccc.Web.Areas.Start.Models.Authentication.SignInViewModel
-@{
-	Layout = "~/Views/Shared/MobileLayoutBase.cshtml";
-}
+@{ Layout = "~/Areas/Start/Views/Shared/MobileLayoutBase.cshtml"; }
 @section csshead {
 	<link rel="stylesheet" href="@Url.Content("~/Areas/Start/Content/Css/mobile.custom.css")" />
 }
