starting to fix gui

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/RegionalSettingsPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Settings/RegionalSettingsPartial.cshtml
@@ -4,7 +4,16 @@
 	 Layout = null;
 }
 
-<div id ="selectors">
-	Culture...@Html.DropDownListFor(x=>x.ChoosenCulture.LCID, new SelectList(Model.Cultures, "LCID", "DisplayName"), new {@id="cultureSelect"})<br />
-	UiCulture...@Html.DropDownListFor(x => x.ChoosenUiCulture.LCID, new SelectList(Model.Cultures, "LCID", "DisplayName"), new { @id = "cultureUiSelect" })
+
+<div id ="selectors" class="ui-corner-all">
+	<p style="height: 80px">
+		xxCulture<br/>
+		@Html.DropDownListFor(x => x.ChoosenCulture.LCID, new SelectList(Model.Cultures, "LCID", "DisplayName"), new { @id = "cultureSelect" })
+		<label id="cultureSaved" class="displaynone">xxSaved!</label>
+	</p>
+	<p style="height: 80px">
+		xxUiCulture<br/>
+		@Html.DropDownListFor(x => x.ChoosenUiCulture.LCID, new SelectList(Model.Cultures, "LCID", "DisplayName"), new { @id = "cultureUiSelect" })
+		<label id="cultureUiSaved" class="displaynone">xxSaved!</label>
+	</p>
 </div>
