--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
@@ -456,18 +456,17 @@ button.icon-left{padding-left: 35px;}
 
 /*** ToolTip ***/
 .tooltip{position: relative;}
-.tooltip-container{
+/*.tooltip-container{
 	position: absolute;
 	bottom: 4px;
 	left: -37px;
-	z-index: 1000;
+	z-index: 1000 !important;
 }
 .tooltip-top, .tooltip-content, .tooltip-bottom{background-image: url(../Images/tooltip_bg_sprite.png); background-color: transparent; background-repeat: no-repeat; width: 198px; }
 .tooltip-top{ background-position: 0 0; height: 3px;}
 .tooltip-content{
 	background-position: -198px 0; 
 	background-repeat: repeat-y;
-	/*color: #21708c;*/
 	font-size: 10px;
 	line-height: 12px;
 	padding: 0 5px;
@@ -484,7 +483,36 @@ button.icon-left{padding-left: 35px;}
 	margin-bottom: 5px;
 	width: 50px;	
 }
-.tooltip-container dl dd{float: left; margin-bottom: 5px; width: 140px;}
+.tooltip-container dl dd{float: left; margin-bottom: 5px; width: 140px;}*/
+
+
+/*! Tooltip style */
+.ui-tooltip-custom .ui-tooltip-titlebar,
+.ui-tooltip-custom .ui-tooltip-content{
+	border-color: rgb(241,241,241);
+	background-color: rgba(241,241,241,0.9);
+	color: #010101;
+	font-size: 10px;
+	line-height: 12px;
+	padding: 1px 4px;
+	text-align: left;
+	word-wrap: break-word;
+}
+
+	.ui-tooltip-custom .ui-tooltip-titlebar{
+		background-color: rgba(241,241,241,0.9);
+	}
+
+	.ui-tooltip-custom .ui-tooltip-icon{
+		border-color: #CCC;
+		background: #F1F1F1;
+		color: #777;
+	}
+	
+	.ui-tooltip-custom .ui-tooltip-titlebar .ui-state-hover{
+		border-color: #AAA;
+		color: #111;
+	}
 
 
 /* Page elements */
