--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Portal/Navigation.cshtml
@@ -79,10 +79,10 @@
 						<dt><span class="icon employee icon-left" title="@Teleopti.Ccc.UserTexts.Resources.UserName" id="username">@User.Identity.Name</span></dt>
 						<dd>
 							<ul class="ui-widget-content">
-								<li><a href="#Settings/Index">Regional Settings</a></li>
-								<li><a href="#Settings/Password">Change Password</a></li>
+								<li><a href="#Settings/Index">xxRegional Settings</a></li>
+								<li><a href="#Settings/Password">xxChange Password</a></li>
 								<li>&nbsp;</li>
-								<li>@Html.ActionLink("Log out", "SignOut", "Authentication", new { area = "Start" }, new { title = @Teleopti.Ccc.UserTexts.Resources.LogOut, id = "signout" })</li>
+								<li>@Html.ActionLink(@Teleopti.Ccc.UserTexts.Resources.LogOut, "SignOut", "Authentication", new { area = "Start" }, new { id = "signout" })</li>
 							</ul>
 						</dd>
 				</dl>
