--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Schedule/WeekPartial.cshtml
@@ -59,7 +59,7 @@
 							<div class="truncate">@period.Title</div>
 							@if (period.Meeting != null)
 							{
-								<div class="icon meeting tooltip floatright" data-mytime-subject="@Html.AttributeEncode(period.Meeting.Title)" data-mytime-location="@Html.AttributeEncode(period.Meeting.Location)"></div>
+								<div class="icon meeting tooltip floatright" tooltip-text="<div><dl><dt>Subject: </dt><dd> @period.Meeting.Title </dd><dt>Location: </dt><dd> @period.Meeting.Location </dd></dl></div>"></div>
 							}
 						</div>
 					</li>
@@ -95,10 +95,10 @@
 					<div class="edit-module-element floatleft">
 						<label class="displayblock" for="Schedule-addTextRequest-fromTime-input-input">@Resources.Time</label>
 						<select id="Schedule-addTextRequest-fromTime-input" class="time-input combobox">
-							@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x*30, 0)))
-							{
+							@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x * 30, 0)))
+	   {
 								<option @(timeSpan.Hours == 8 && timeSpan.Minutes == 0 ? "selected" : "") value="@Html.AttributeEncode(@TimeHelper.TimeOfDayFromTimeSpan(timeSpan))">@TimeHelper.TimeOfDayFromTimeSpan(timeSpan)</option>
-							}
+	   }
 						</select>
 					</div>
 					<div class="edit-module-element clearleftfloat floatleft">
@@ -108,10 +108,10 @@
 					<div class="edit-module-element floatleft">
 						<label class="displayblock" for="Schedule-addTextRequest-toTime-input-input">@Resources.Time</label>
 						<select id="Schedule-addTextRequest-toTime-input" class="time-input combobox">
-							@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x*30, 0)))
-							{
+							@foreach (var timeSpan in Enumerable.Range(0, 48).Select(x => new TimeSpan(0, x * 30, 0)))
+	   {
 								<option @(timeSpan.Hours == 17 && timeSpan.Minutes == 0 ? "selected" : "") value="@Html.AttributeEncode(@TimeHelper.TimeOfDayFromTimeSpan(timeSpan))">@TimeHelper.TimeOfDayFromTimeSpan(timeSpan)</option>
-							}
+	   }
 						</select>
 					</div>
 					<div class="clearboth"></div>
