--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
@@ -97,18 +97,18 @@
 	left: 125px;
 }
 
-.layer 
+.teamschedule .layer 
 {
 	vertical-align: bottom;
 	height: 19px;
 	border-radius: 2px;
 }
 
-.gradient {
+.teamschedule .gradient {
 	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .6) 100%);
 } 
 
-.dayoff 
+.teamschedule .dayoff 
 {
 	margin-left: 5px;
 	width: 824px;
