Make reportdata start on culture first day of week

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
@@ -79,11 +79,11 @@
 			<li data-role="fieldcontain">
 				<fieldset data-role="controlgroup" data-type="horizontal">
 					<legend>Interval (loc)</legend>
-					<input type="radio" name="sel-interval" id="sel-interval-day" value="1" checked="checked" />
-					<label for="sel-interval-day">
+					<input type="radio" name="sel-interval" id="report-settings-interval-day" value="1" checked="checked" />
+					<label for="report-settings-interval-day">
 						@Resources.Day</label>
-					<input type="radio" name="sel-interval" id="sel-interval-week" value="7" />
-					<label for="sel-interval-week">
+					<input type="radio" name="sel-interval" id="report-settings-interval-week" value="7" />
+					<label for="report-settings-interval-week">
 						@Resources.Week</label>
 				</fieldset>
 			</li>
