--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Shared/Error.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Shared/Error.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Teleopti.Ccc.Web.Models.Shared
 @model ErrorViewModel
-@{ Layout = "~/Views/Shared/MobileLayoutBase.cshtml"; }
+@{ Layout = "MobileLayoutBase.cshtml"; }
 @section csshead {
 	<link rel="stylesheet" href="@Url.Content("~/Areas/MobileReports/Content/Css/mobile.custom.css")" />
 
