--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Views/Preference/PreferencePartial.cshtml
@@ -19,6 +19,12 @@
 	 }
  </div>
 <div id="Preference-body" class="body-calendarview clearfix" data-mytime-periodselection='@Html.Schedule().PeriodSelectionAsJson(Model.PeriodSelection)'>
+	<style>
+		@foreach (var style in Model.Styles)
+		{
+			@string.Format(".calendarview-week li.{0} div {{border-left-color: {1}; border-right-color: {1};}}\n", style.Name, style.ColorHex)
+		}
+	</style>
 	<div id="Preference-body-inner" class="body-calendarview-inner clearfix">
 		<ul class="weekdays">
 			@foreach (var weekDayName in Model.WeekDayHeaders)
@@ -40,7 +46,7 @@
 					var personAssignment = day.PersonAssignment;
 					var dayOff = day.DayOff;
 					var absence = day.Absence;
-					<li class="@(day.Editable ? "editable" : "non-editable")" data-mytime-date="@Html.Schedule().FormatDate(day.Date)" class="@Html.AttributeEncode(day.StyleClassName)">
+					<li class="@(day.Editable ? "editable" : "non-editable") @Html.AttributeEncode(day.StyleClassName)" data-mytime-date="@Html.Schedule().FormatDate(day.Date)">
 						<div>
 							<div class="day-header">
 								<span class="floatleft ml5">@day.Header.DayDescription</span><span class="floatright mr5">@day.Header.DayNumber</span>
@@ -72,7 +78,6 @@
 										@absence.Absence
 									</div>
 								}
-
 							</div>
 						</div>
 					</li>
